infra/networking.tf
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    
    tags={
        Name="alchemyst-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route{
        cidr_block="0.0.0.0/0"
        gateway_id=aws_internet_gateway.main.id
    }

    tags={
        Name="alchemyst-public-rt"
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id


    tags={
        Name="alchemyst-private-rt"
    }
}
resource "aws_route_table_association" "public" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "private" {
    subnet_id      = aws_subnet.private.id
    route_table_id = aws_route_table.private.id
}
